Fix Chrome keyboard accessibiltiy
Closes #2906

Signed-off-by: Nick Semenkovich <semenko@alum.mit.edu>

--- a/chromium/_locales/de/messages.json
+++ b/chromium/_locales/de/messages.json
@@ -108,7 +108,7 @@
         "message": "Stabile Regeln"
     },
     "chrome_stable_rules_description": {
-        "message": "Sie benutzen eine <a href=\"https://de.wikipedia.org/wiki/Transport_Layer_Security\" title=\"Wikipedia-Artikel über Verschlüsselung\" target=\"_blank\" tabindex=\"-1\">verschlüsselte</a> Verbindung zu diesen Webseiten:"
+        "message": "Sie benutzen eine <a href=\"https://de.wikipedia.org/wiki/Transport_Layer_Security\" title=\"Wikipedia-Artikel über Verschlüsselung\" target=\"_blank\">verschlüsselte</a> Verbindung zu diesen Webseiten:"
     },
     "chrome_experimental_rules": {
         "message": "Experimentelle Regeln"
