--- a/chromium/_locales/en/messages.json
+++ b/chromium/_locales/en/messages.json
@@ -108,7 +108,7 @@
         "message": "Stable rules"
     },
     "chrome_stable_rules_description": {
-        "message": "Force <a href=\"https://wikipedia.org/wiki/Transport_Layer_Security\" title=\"Wikipedia article about encryption\" target=\"_blank\" tabindex=\"-1\">encrypted</a> connections to these websites:"
+        "message": "Force <a href=\"https://wikipedia.org/wiki/Transport_Layer_Security\" title=\"Wikipedia article about encryption\" target=\"_blank\">encrypted</a> connections to these websites:"
     },
     "chrome_experimental_rules": {
         "message": "Experimental rules"
