--- a/chromium/_locales/es/messages.json
+++ b/chromium/_locales/es/messages.json
@@ -102,7 +102,7 @@
         "message": "Reglas estables"
     },
     "chrome_stable_rules_description": {
-        "message": "Forzar conexiones <a href=\"https://es.wikipedia.org/wiki/Transport_Layer_Security\" title=\"Artículo de Wikipedia sobre el cifrado\" target=\"_blank\" tabindex=\"-1\">cifradas</a> a estos sitios web:"
+        "message": "Forzar conexiones <a href=\"https://es.wikipedia.org/wiki/Transport_Layer_Security\" title=\"Artículo de Wikipedia sobre el cifrado\" target=\"_blank\">cifradas</a> a estos sitios web:"
     },
     "chrome_experimental_rules": {
         "message": "Reglas experimentales"
