--- a/chromium/_locales/fi/messages.json
+++ b/chromium/_locales/fi/messages.json
@@ -12,7 +12,7 @@
         "message": "Vakaat säännöt"
     },
     "chrome_stable_rules_description": {
-        "message": "Pakota näiden sivustojen yhteydet <a href=\"https://fi.wikipedia.org/wiki/TLS\" title=\"Wikipedia-artikkeli salauksesta\" target=\"_blank\" tabindex=\"-1\">salatuiksi</a>:"
+        "message": "Pakota näiden sivustojen yhteydet <a href=\"https://fi.wikipedia.org/wiki/TLS\" title=\"Wikipedia-artikkeli salauksesta\" target=\"_blank\">salatuiksi</a>:"
     },
     "chrome_experimental_rules": {
         "message": "Kokeelliset säännöt"
