--- a/chromium/_locales/fr/messages.json
+++ b/chromium/_locales/fr/messages.json
@@ -45,7 +45,7 @@
       "message": "Règles stables"
    },
    "chrome_stable_rules_description": {
-      "message": "Forcer les connexions \u003Ca href=\"https://fr.wikipedia.org/wiki/Transport_Layer_Security\" title=\"Article Wikipedia sur le chiffrement\" target=\"_blank\" tabindex=\"-1\">chiffrées\u003C/a> pour ces sites :"
+      "message": "Forcer les connexions \u003Ca href=\"https://fr.wikipedia.org/wiki/Transport_Layer_Security\" title=\"Article Wikipedia sur le chiffrement\" target=\"_blank\">chiffrées\u003C/a> pour ces sites :"
    },
    "chrome_what_is_this": {
       "message": "Qu'est-ce que c'est ?"
