--- a/chromium/_locales/sv/messages.json
+++ b/chromium/_locales/sv/messages.json
@@ -102,7 +102,7 @@
         "message": "Stabila regler"
     },
     "chrome_stable_rules_description": {
-        "message": "Tvinga <a href=\"https://sv.wikipedia.org/wiki/Transport_Layer_Security\" title=\"Wikipedia artikel om kryptering\" target=\"_blank\" tabindex=\"-1\">krypterade</a> uppkoppligar till dessa webbsidor:"
+        "message": "Tvinga <a href=\"https://sv.wikipedia.org/wiki/Transport_Layer_Security\" title=\"Wikipedia artikel om kryptering\" target=\"_blank\">krypterade</a> uppkoppligar till dessa webbsidor:"
     },
     "chrome_experimental_rules": {
         "message": "Experimentella regler"
