--- a/src/chrome/locale/en/https-everywhere.dtd
+++ b/src/chrome/locale/en/https-everywhere.dtd
@@ -37,7 +37,7 @@
 <!ENTITY https-everywhere.prefs.reset_default "Reset to Default">
 <!ENTITY https-everywhere.prefs.view_xml_source "View XML Source">
 
-<!ENTITY https-everywhere.stable_rules "Stable rules">
-<!ENTITY https-everywhere.stable_rules_description "Force encrypted connections to these websites:">
-<!ENTITY https-everywhere.experimental_rules "Experimental rules">
-<!ENTITY https-everywhere.experimental_rules_description "May cause warnings or breakage. Disabled by default.">
+<!ENTITY https-everywhere.chrome.stable_rules "Stable rules">
+<!ENTITY https-everywhere.chrome.stable_rules_description "Force encrypted connections to these websites:">
+<!ENTITY https-everywhere.chrome.experimental_rules "Experimental rules">
+<!ENTITY https-everywhere.chrome.experimental_rules_description "May cause warnings or breakage. Disabled by default.">
