--- a/src/Changelog
+++ b/src/Changelog
@@ -1,3 +1,10 @@
+Firefox 5.1.3 / Chrome 2016.2.18
+  * Performance & memory usage improvements for Chrome
+  * Introduce temporary disable option on Chrome
+  * Bugfix: make custom rules disableable
+  * Improvements to tests
+  * Switch to using JSON to store rulesets
+
 Firefox 5.1.2 / Chrome 2015.12.16
   * Ruleset fixes
 
