--- a/src/chrome/locale/en/https-everywhere.dtd
+++ b/src/chrome/locale/en/https-everywhere.dtd
@@ -13,6 +13,7 @@
 <!ENTITY https-everywhere.about.tor_lang_code "en">
 <!ENTITY https-everywhere.about.or "or">
 <!ENTITY https-everywhere.about.donate_eff "Donating to EFF">
+<!ENTITY https-everywhere.about.add_new_rule "Add a new rule for this site">
 
 <!ENTITY https-everywhere.menu.about "About HTTPS Everywhere">
 <!ENTITY https-everywhere.menu.observatory "SSL Observatory Preferences">
@@ -41,3 +42,14 @@
 <!ENTITY https-everywhere.chrome.stable_rules_description "Force encrypted connections to these websites:">
 <!ENTITY https-everywhere.chrome.experimental_rules "Experimental rules">
 <!ENTITY https-everywhere.chrome.experimental_rules_description "May cause warnings or breakage. Disabled by default.">
+<!ENTITY https-everywhere.chrome.add_rule "Add a rule for this site">
+<!ENTITY https-everywhere.chrome.always_https_for_host "Always use https for this host">
+<!ENTITY https-everywhere.chrome.host "Host:">
+<!ENTITY https-everywhere.chrome.show_advanced "Show advanced">
+<!ENTITY https-everywhere.chrome.hide_advanced "Hide advanced">
+<!ENTITY https-everywhere.chrome.rule_name "Rule name">
+<!ENTITY https-everywhere.chrome.regex "Matching regex">
+<!ENTITY https-everywhere.chrome.redirect_to "Redirect to">
+<!ENTITY https-everywhere.chrome.status_cancel_button "Cancel">
+
+
