--- a/src/Changelog
+++ b/src/Changelog
@@ -1,3 +1,8 @@
+Firefox 5.1.4 / Chrome 2016.2.23
+  * Fixes for Firefox Dev Edition
+  * Chrome: Fix regressions in custom rule functions
+  * Firefox: Fix custom ruleset regression
+
 Firefox 5.1.3 / Chrome 2016.2.18
   * Performance & memory usage improvements for Chrome
   * Introduce temporary disable option on Chrome
