--- a/src/Changelog
+++ b/src/Changelog
@@ -1,3 +1,7 @@
+Firefox 5.1.6 / Chrome 2016.4.4
+  * Ruleset fixes
+  * Fix bug in Chromium, Firefox to limit FQDN
+
 Firefox 5.1.5 / Chrome 2016.3.23
   * Ruleset fixes
   * Improve coverage tests
