--- a/src/Changelog
+++ b/src/Changelog
@@ -1,3 +1,7 @@
+Firefox 5.1.9 / Chrome 2016.5.10
+  * Adds large Bitly branded domain ruleset
+  * Additional ruleset fixes
+
 Firefox 5.1.6 / Chrome 2016.4.4
   * Ruleset fixes
   * Fix bug in Chromium, Firefox to limit FQDN
